--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,10 +1,10 @@
 <div class="dashboard">
     <div class="dashboard__left">
         <div class="dashboard__user-created-expenses user-created-expenses card">
-            <div class="card__header">
+            <header class="card__header">
                 <h4 class="dashboard__title">User Created Expenses</h4>
                 <p class="user-created-expenses__sum"></p>
-            </div>
+            </header>
             <ul class="user-created-expenses__list">
                 <li class="user-created-expenses__item" data-expense-id="not-an-item">No expenses</li>
             </ul>
@@ -21,7 +21,7 @@
             <button class="expense-to-pay__show-more-btn" data-action="show">Show More</button>
         </div>
     </div>
-    <div class="dashboard__right">
+    <aside class="dashboard__right">
         <div class="dashboard__add-expense add-expense card">
             <a class="add-expense__button" href="#add-expense">Add Expense</a>
         </div>
@@ -31,5 +31,5 @@
             </div>
             <ul class="recent-payments__list"></ul>
         </div>
-    </div>
+    </aside>
 </div>
