--- a/styles/actions/info-expense.css
+++ b/styles/actions/info-expense.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 30px;
+    font-size: min(20px , 5vw);
 }
 
 .expense-info__header::after {
@@ -36,7 +36,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 18px;
+    font-size: min(18px , 4vw);
 }
 
 .participant_paid {
