--- a/styles/cards/add-expense.css
+++ b/styles/cards/add-expense.css
@@ -3,7 +3,7 @@
     text-align: center;
     background-color: var(--color-primary);
     color: var(--font-color);
-    box-shadow: 0px 0px 3px var(--color-shadow);
+    box-shadow: 0 0 3px var(--color-shadow);
     padding: 10px 30px;
     border-radius: 10px;
     cursor: pointer;
