--- a/styles/cards/recent-payments.css
+++ b/styles/cards/recent-payments.css
@@ -17,12 +17,16 @@
     border-radius: 10px;
 
     background-color: var(--color-secondary);
-    box-shadow: 0px 0px 5px var(--color-shadow);
+    box-shadow: 0 0 5px var(--color-shadow);
+}
+
+.recent-payments__name {
+    font-size: min(18px, 5vw);
 }
 
 @media screen and (max-width: 1000px) {
     .recent-payments__item {
-        font-size: 18px;
+        font-size: min(16px, 3vw);
     }
 }
 
@@ -30,7 +34,7 @@
     .recent-payments__item {
         align-items: flex-start;
         flex-direction: column;
-        font-size: 16px;
+        font-size: min(14px, 2.5vw);
     }
 }
 
