--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -34,15 +34,15 @@
 }
 
 .dashboard__title {
-    font-size: 20px;
+    font-size: min(5vw, 18px);
     letter-spacing: 0.1em;
     color: var(--font-color);
 }
 
 .card {
     padding: 20px;
-    border-radius: 20px;
-    box-shadow: 0px 0px 3px var(--color-shadow);
+    /*border-radius: 20px;*/
+    box-shadow: 0 0 3px var(--color-shadow);
     background-color: var(--card-color);
 
     background: var(--card-color);
