--- a/styles/login.css
+++ b/styles/login.css
@@ -11,7 +11,7 @@
 
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px var(--color-shadow);
+    box-shadow: 0 0 10px var(--color-shadow);
     background-color: var(--color-primary);
 }
 
@@ -44,7 +44,7 @@
     height: 30px;
     border-radius: 5px;
     background-color: var(--color-secondary);
-    box-shadow: 0px 0px 2px var(--color-shadow);
+    box-shadow: 0 0 2px var(--color-shadow);
     color: var(--font-color);
     cursor: pointer;
 }
